--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@reduxjs/toolkit": "^1.5.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-elements": "^3.1.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
