--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@react-navigation/stack": "^5.12.8",
     "@reduxjs/toolkit": "^1.5.0",
     "expo": "~40.0.0",
+    "expo-facebook": "^9.1.0",
+    "expo-google-app-auth": "^8.1.4",
+    "expo-google-sign-in": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
