--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-google-app-auth": "^8.1.4",
     "expo-google-sign-in": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "expo-stripe-checkout": "^1.0.1",
     "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -28,10 +29,14 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
+    "react-native-stripe": "^1.2.2",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.2.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "stripe-client": "^1.1.5",
+    "tipsi-stripe": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
